--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
             </dependencies>
         </profile>
         <profile>
+            <id>gcp</id>
+            <properties>
+                <spring.profiles.active>gcp</spring.profiles.active>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>dev_nas</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
